# incremental_watershed

./: .gitignore  .gitmodules  Add_0.txt  Add_1.txt  CMakeLists.txt  README.md  algorithms.cpp  algorithms.h  benc_iws.sh  benc_niws.sh  bench_2d_user.sh  bench_iws.sh  data.h  generate_markers.py  graph.cpp  graph.h  imageManager.cpp  imageManager.h  main.cpp  speedup-theorical.csv  test_3d_integrity.py  time_init_IW.csv
benchmark_data/: graph_big_dataset.csv  graph_coral.csv  init_dift.csv  time_init_IW.csv
benchmark_data/big/: 0_time_DIFT.csv  0_time_IW.csv  0_time_NIW.csv  0_time_higra.csv  0_time_meyer.csv  100_time_DIFT.csv  100_time_IW.csv  100_time_NIW.csv  100_time_higra.csv  100_time_meyer.csv  101_time_DIFT.csv  101_time_IW.csv  101_time_NIW.csv  101_time_higra.csv  101_time_meyer.csv  102_time_DIFT.csv  102_time_IW.csv  102_time_NIW.csv  102_time_higra.csv  102_time_meyer.csv  103_time_DIFT.csv  103_time_IW.csv  103_time_NIW.csv  103_time_higra.csv  103_time_meyer.csv  104_time_DIFT.csv  104_time_IW.csv  104_time_NIW.csv  104_time_higra.csv  104_time_meyer.csv  105_time_DIFT.csv  105_time_IW.csv  105_time_NIW.csv  105_time_higra.csv  105_time_meyer.csv  106_time_DIFT.csv  106_time_IW.csv  106_time_NIW.csv  106_time_higra.csv  106_time_meyer.csv  (+710 more)
benchmark_data/coral/: time_DIFT.csv
benchmark_data/dwarf/: higra.csv  time_DIFT.csv
benchmark_data/parallel/: CCL_0_patient12.csv  CCL_0_patient12_par.csv  CCL_0_patient19.csv  CCL_0_patient19_par.csv  CCL_0_patient20.csv  CCL_0_patient20_par.csv  CCL_0_patient2_par.csv  CCL_0_patient7.csv  CCL_0_patient7_par.csv  CCL_1_patient12_par.csv  CCL_1_patient19.csv  CCL_1_patient19_par.csv  CCL_1_patient2.csv  CCL_1_patient20_par.csv  CCL_1_patient2_par.csv  CCL_1_patient7.csv  CCL_1_patient7_par.csv  CCL_2_patient12_par.csv  CCL_2_patient19.csv  CCL_2_patient19_par.csv  CCL_2_patient20_par.csv  CCL_2_patient2_par.csv  CCL_2_patient7_par.csv  CCL_3_patient12_par.csv  CCL_3_patient19_par.csv  CCL_3_patient20_par.csv  CCL_3_patient2_par.csv  CCL_3_patient7.csv  CCL_3_patient7_par.csv  CCL_4_patient12.csv  CCL_4_patient12_par.csv  CCL_4_patient19.csv  CCL_4_patient19_par.csv  CCL_4_patient20_par.csv  CCL_4_patient2_par.csv  CCL_4_patient7.csv  CCL_4_patient7_par.csv  CCL_5_patient12_par.csv  CCL_5_patient19_par.csv  CCL_5_patient2.csv  (+165 more)
benchmark_data/plant/: time_DIFT.csv
benchmark_data/tower/: time_DIFT.csv  time_IW.csv  time_NIW.csv  time_meyer.csv
benchmark_data_desktopQ/: breadth_min_figure_ccl.py  exp2d_user.py  exp_2d_bigdataset.py  exp_3d.py  time_repartition.py
benchmark_data_desktopQ/min_breadth_perf_analisys/: CCL_0_patient2.csv  CCL_1_patient2.csv  CCL_3_patient2.csv  avg_background_time_iws_patient2_0_1.csv  avg_background_time_iws_patient2_0_11.csv  avg_background_time_iws_patient2_0_17.csv  avg_background_time_iws_patient2_0_21.csv  avg_background_time_iws_patient2_0_23.csv  avg_background_time_iws_patient2_0_25.csv  avg_background_time_iws_patient2_0_29.csv  avg_background_time_iws_patient2_0_3.csv  avg_background_time_iws_patient2_0_39.csv  avg_background_time_iws_patient2_0_4.csv  avg_background_time_iws_patient2_0_47.csv  avg_background_time_iws_patient2_0_7.csv  avg_background_time_iws_patient2_1000_11.csv  avg_background_time_iws_patient2_1000_19.csv  avg_background_time_iws_patient2_1000_21.csv  avg_background_time_iws_patient2_1000_23.csv  avg_background_time_iws_patient2_1000_27.csv  avg_background_time_iws_patient2_1000_3.csv  avg_background_time_iws_patient2_1000_33.csv  avg_background_time_iws_patient2_1000_35.csv  avg_background_time_iws_patient2_1000_39.csv  avg_background_time_iws_patient2_1000_4.csv  avg_background_time_iws_patient2_1000_41.csv  avg_background_time_iws_patient2_1000_43.csv  avg_background_time_iws_patient2_1000_48.csv  avg_background_time_iws_patient2_1000_5.csv  avg_background_time_iws_patient2_1000_7.csv  avg_background_time_iws_patient2_100_1.csv  avg_background_time_iws_patient2_100_11.csv  avg_background_time_iws_patient2_100_15.csv  avg_background_time_iws_patient2_100_17.csv  avg_background_time_iws_patient2_100_2.csv  avg_background_time_iws_patient2_100_21.csv  avg_background_time_iws_patient2_100_25.csv  avg_background_time_iws_patient2_100_3.csv  avg_background_time_iws_patient2_100_33.csv  avg_background_time_iws_patient2_100_41.csv  (+854 more)
benchmark_raw_data/: breadth_min_figure.py  ccl_times.py  generate.sh  size_front.py  table_2d_exp_big.tex  table_2d_exp_user.tex  table_3d_exp.tex  times.csv  times_wo_sync.csv
benchmark_raw_data/ccl_times/: avg_background_time_iws_patient12.csv  avg_background_time_iws_patient12_par.csv  avg_background_time_iws_patient19.csv  avg_background_time_iws_patient19_par.csv  avg_background_time_iws_patient2.csv  avg_background_time_iws_patient20.csv  avg_background_time_iws_patient20_par.csv  avg_background_time_iws_patient2_par.csv  init_time_iws_patient12.csv  (+45 more)
dataStructures/: Q.h  QBT.h  QEBT.cpp  QEBT.h
data_3d/: amira_marker_converter.py  bench_itk.sh  generate_marker.py  itk_expriment.py  marker_0.txt  prl_data.py  test.py  test2.py
higra_benchmark/: PLOT-ICIP.ipynb  main.py
holiday_data/: coral.jpg.gradient.pgm  coral.jpg.pgm  dwarf.jpg.gradient.pgm  dwarf.jpg.pgm  graph_coral.csv  graph_coral_j.csv  graph_dwarf.csv  graph_dwarf_j.csv  graph_plant.csv  graph_plant_j.csv  graph_tower.csv  graph_tower_j.csv  tower.jpg.gradient.pgm  tower.jpg.pgm
src/: algorithms.cpp  algorithms.h  imageManager.cpp  imageManager.fwd.h  imageManager.h  main.cpp  markers.h
src/benchmarks/: CMakeLists.txt  paper_tower.cpp  paper_tower.h  test.cpp  test.h
src/framework/: CMakeLists.txt  algorithms.cpp  algorithms.h  algorithms3D.cpp  algorithms3D.h  data.h  imageManager.cpp  imageManager.h  interface.cpp  iws_bench.cpp  iws_bench_front.cpp  main.cpp  main_3d.cpp  meyer_ws.cpp  meyer_ws.h  niws_bench.cpp  parDMap.cpp  parDMap.h  volumeManager.cpp  volumeManager.fwd.h  volumeManager.h
src/framework/dataStructures/: QBT.cpp  QBT.h  QEBT.cpp  QEBT.h  QT.cpp  QT.h  graph.cpp  graph.h  partition.cpp  partition.h
src/framework/libs/: natural_sort.h
(+12065 files in other folders)
